[package]
name = "gdueiv"
version = "0.1.2"
edition = "2021"
description = "geometry and devices in GUI library"
repository = "https://github.com/btanno/gdueiv"
license = "MIT"
readme = "README.md"
categories = ["gui"]
keywords = ["gui"]

[features]
serde = ["dep:serde"]

[dependencies]
num = "0.4.1"
serde = { version = "1.0.195", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }
