[package]
name = "gedv"
version = "0.3.2"
edition = "2024"
description = "geometry and devices in GUI library"
repository = "https://github.com/btanno/gedv"
license = "MIT"
readme = "README.md"
categories = ["gui"]
keywords = ["gui"]

[features]
serde = ["dep:serde"]

[dependencies]
num = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
] }
